--- a/index-START.html
+++ b/index-START.html
@@ -18,8 +18,8 @@
 
   <style>
     html {
-      background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
-      background-size:cover;
+      background:#018DED url('bg.jpg');
+      background-size: cover;
       font-family:'helvetica neue';
       text-align: center;
       font-size: 10px;
@@ -35,9 +35,9 @@
     }
 
     .clock {
-      width: 30rem;
-      height: 30rem;
-      border:20px solid white;
+      width: 20rem;
+      height: 20rem;
+      border:15px solid rgba(#fff,.48);
       border-radius:50%;
       margin:50px auto;
       position: relative;
