--- a/index-START.html
+++ b/index-START.html
@@ -5,7 +5,7 @@
   <title>JS + CSS Clock</title>
 </head>
 <body>
-
+    <div id="time"></div>
 
     <div class="clock">
       <div class="clock-face">
@@ -75,7 +75,7 @@
   const minHand = document.querySelector('.min-hand');
   const hourHand = document.querySelector('.hour-hand');
 
-  function setDate() {
+  function showTime() {
     const now = new Date();
     const seconds = now.getSeconds();
     const secondsDegrees = ((seconds / 60) * 360) + 90;
@@ -89,8 +89,24 @@
     const hourDegrees = ((hour / 12) * 360) + ((mins/60)*30) + 90;
     hourHand.style.transform = `rotate(${hourDegrees}deg)`;
   }
+  setInterval(showTime, 1000);
+  (function () {
+    function checkTime(i) {
+        return (i < 10) ? "0" + i : i;
+    }
 
-  setInterval(setDate, 1000);
+    function startTime() {
+        var today = new Date(),
+            h = checkTime(today.getHours()),
+            m = checkTime(today.getMinutes()),
+            s = checkTime(today.getSeconds());
+        document.getElementById('time').innerHTML = h + ":" + m + ":" + s;
+        t = setTimeout(function () {
+            startTime()
+        }, 500);
+    }
+    startTime();
+    })();
   </script>
 </body>
 </html>
